firewall.conf
# Generated by iptables-save v1.4.21 on Sat Nov 16 17:41:03 2019
*filter
:INPUT DROP [143:15703]
:FORWARD DROP [174:11115]
:OUTPUT DROP [32:2034]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -s 192.168.20.2/32 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -i eth2 -o eth0 -j ACCEPT
-A FORWARD -d 192.168.20.3/32 -i eth0 -o eth2 -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A FORWARD -s 192.168.10.3/32 -d 192.168.20.4/32 -p tcp -m tcp --sport 8080 -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -d 192.168.20.2/32 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
COMMIT
# Completed on Sat Nov 16 17:41:03 2019
# Generated by iptables-save v1.4.21 on Sat Nov 16 17:41:03 2019
*nat
:PREROUTING ACCEPT [825:62833]
:INPUT ACCEPT [1:60]
:OUTPUT ACCEPT [34:2202]
:POSTROUTING ACCEPT [10:584]
-A POSTROUTING -s 192.168.20.3/32 -o eth0 -j MASQUERADE
COMMIT
# Completed on Sat Nov 16 17:41:03 2019
